--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-      "api/*.php": {
+      "api/resources/views/*.php": {
         "runtime": "vercel-php@0.6.0"
       },
       "api/*.png": {
