--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,16 @@
       "api/resources/views/*.php": {
         "runtime": "vercel-php@0.6.0"
       },
-      "api/*.png": {
+      "api/public/src/img*.png": {
+        "runtime": "vercel-php@0.6.0"
+      },
+      "api/public/src/img*.webp": {
         "runtime": "vercel-php@0.6.0"
       }
     },
     "routes": [
       { "src": "/(.*)",  "dest": "/api/resources/views/index.blade.php" },
-      { "src": "/(.*)",  "dest": "/img/*.png" }
+      { "src": "/(.*)",  "dest": "/api/public/src/img/*.png" },
+      { "src": "/(.*)",  "dest": "/api/public/src/img/*.webp" }
     ]
   }
